# 3curse

AI/LAB0/: lab0.docx
AI/SWI/: LAB2.pl
AI/SWI/LAB3/: LAB3.pl  (+2 more)
AI/SWI/LAB7/cuthill-mckee-hs/: README.md  cuthill-mckee-hs.cabal
AI/SWI/LAB7/cuthill-mckee-hs/app/: Main.hs
AI/SWI/LAB7/cuthill-mckee-hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
AI/SWI/LAB7/cuthill-mckee-hs/dist-newstyle/packagedb/ghc-9.6.7/: cuthill-mckee-hs-0.1.0.0-inplace.conf  package.cache
AI/SWI/LAB7/cuthill-mckee-hs/sample/: graph.txt
AI/SWI/LAB7/cuthill-mckee-hs/src/: CuthillMcKee.hs  Graph.hs  Matrix.hs  Metrics.hs
AI/SWI/LAB7/cuthill-mckee-hs/test/: Spec.hs
BD/: README.md
DAGA/lab_2/: detailed_log.txt  final_report.txt  lab3_threads.c  make_test_files.sh
DAGA/lab_3/: ConsoleApplication3.cpp  log.txt
DAGA/proj/: 4sem.pro  CMakeLists.txt  README.md  gen_speed_plot.py  makefile  setup.bat  setup.sh
DAGA/proj/4sem.app/Contents/: Info.plist
DAGA/proj/4sem.app/Contents/MacOS/: 4sem
DAGA/proj/artifacts/: main
DAGA/proj/assets/: test_generation_time_by_thread_num_1mutex_cell_size.csv
DAGA/proj/scripts/: gen_speed_plot.py  setup.bat  setup.sh
DAGA/proj/src/maze/: maze.cpp  maze.h  maze_generation.cpp  maze_generation.h  maze_gui.cpp  maze_multithreading.cpp  maze_pathfinding.cpp  maze_pathfinding.h
DAGA/proj/web/backend/src/: Main.java
DAGA/proj/web/frontend/: app.js  index.html  styles.css
JAVA/: test.java
JAVA/LAB1/: lab1.java
JAVA/LAB5/: README.md  pom.xml
JAVA/LAB5-1/: devices.txt  pom.xml
JAVA/LAB6/: README.md  pom.xml
JAVA/LAB6-1/: README.md
JAVA/test/: test5.txt
SETI/: README.md
cursach/: README.md
cursach/server/: .gitignore  README.md  build.gradle  settings.gradle
cuthill-mckee-hs/: README.md  cuthill-mckee-hs.cabal
(+136 files in other folders)
